@@ -1,3 +1,15 @@
+2005-02-03  Mark McLoughlin  <mark@skynet.ie>
+
+	* admin-tool/profilesdialog.py: start implementing
+	profiles manager dialog.
+	
+	* admin-tool/sabayon.glade: add profiles dialog.
+	
+	* lib/Makefile.am, lib/config.py.in: add some more
+	variables.
+	
+	* lib/protosession.py: move some variables to config.py
+
 2005-02-02  Mark McLoughlin  <mark@skynet.ie>
 
 	* lib/protosession.py: apply the profile before
